Fix icon not showing up

--- a/public/css/base/_global.scss
+++ b/public/css/base/_global.scss
@@ -14,14 +14,6 @@ body {
   font-size: 1rem;
 }
 
-form {
-  input,
-  textarea {
-    font-size: 1rem;
-    color: white;
-  }
-}
-
 h1 {
   margin-bottom: 16px;
   font-size: 4rem;
